fix tooltip overlap sections while it has 0 opacity

--- a/styles.css
+++ b/styles.css
@@ -74,7 +74,6 @@ text {
     border-radius: 8px;
     transition: opacity 0.2s;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-    opacity: 0;
 }
 
 .tooltip-header {
